<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	<LinearLayout
		android:layout_weight="1" 
		android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:orientation="vertical">
			 	
	    <LinearLayout style="@style/TitleBar">
	        <ImageView style="@style/TitleBarLogo"
	            android:id="@+id/vbtHome"
	            android:contentDescription="@string/start_header" 
	            android:src="@drawable/actionbar_home" />
	
	        <ImageView style="@style/TitleBarSeparator" />
	        
	 		<TextView style="@style/TitleBarText"
	    	android:id="@+id/aboutHeader" 
	    	android:text="@string/feedback_header" />
	    	
	        <View style="@style/TitleBarSpring" />
	        
	        <ImageView style="@style/TitleBarSeparator" />
	
	    </LinearLayout>
			 	
			 	
	
			<TextView android:layout_width="fill_parent" 
				android:id="@+id/hcjbText" 
				android:layout_height="wrap_content" 
				android:textSize="18sp"
				android:text="@string/feedback_text" />
	
	</LinearLayout>
	<LinearLayout 
		android:id="@+id/linearLayout1" 
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent" 
		android:gravity="center"
	    android:background="#fff">
		
		<ImageView 
			android:src="@drawable/logga_s" 
			android:layout_height="wrap_content"
			android:id="@+id/imageView2" 
			android:gravity="center"
			android:layout_width="wrap_content"/>
			
		<TextView android:text="@string/reklmatext2" 
			android:layout_height="wrap_content" 
			android:id="@+id/textView3" 
			android:layout_width="fill_parent"
			android:gravity="center"
		    android:textSize="20sp"
		    android:textColor="#000"
		    android:layout_margin="10dp"/>
	</LinearLayout>
</LinearLayout>
