<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
     android:id="@+id/linearLayout0"
    >
    
    <FrameLayout android:layout_height="wrap_content" 
    	android:id="@+id/frameLayout1" 
    	android:layout_width="fill_parent" 
    	android:background="#8000">
	
		    <LinearLayout style="@style/TitleBar">
		        <ImageView style="@style/TitleBarLogo"
		            android:id="@+id/vbtHome"
		            android:contentDescription="@string/start_header" 
		            android:src="@drawable/eastericon_grey" /> 	
        <ImageView style="@style/TitleBarSeparator" />
        
 		<TextView style="@style/TitleBarText"
    	android:id="@+id/aboutHeader" 
    	android:text="@string/hello" />
		
		        <View style="@style/TitleBarSpring" />
		        
		        <ImageView style="@style/TitleBarSeparator" />
		
		        <ImageView style="@style/TitleBarLogo"
		            android:id="@+id/vbtActionBarNext"
		            android:src="@drawable/ic_media_play" /> 
		
		    </LinearLayout>
	
	
	</FrameLayout>    
	
	<ListView android:layout_height="fill_parent" 
		android:layout_weight="1" 
		
		android:id="@android:id/list" 
		android:layout_width="match_parent"
		android:background="#8000"
		android:cacheColorHint="#00000000" />
	
	
	<LinearLayout 
		android:id="@+id/linearLayout1" 
		android:layout_height="wrap_content" 
		android:layout_width="match_parent" 
		android:gravity="center"
	    android:background="#fff">
		
		<ImageView 
			android:src="@drawable/logga_s" 
			android:layout_height="wrap_content"
			android:id="@+id/imageView1" 
			android:gravity="center"
			android:layout_width="wrap_content"/>
			
		<TextView android:text="@string/reklmatext1" 
			android:layout_height="wrap_content" 
			android:id="@+id/textView3" 
			android:layout_width="fill_parent"
			android:gravity="center"
		    android:textSize="20sp"
		    android:textColor="#000"
		    android:layout_margin="10dp"/>
	</LinearLayout>
	
	
</LinearLayout>
